# remote-debug-for-intel-fpga

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app_version.h.in  main.cpp  version.cmake
include/: Makefile  app_version.h.in  common.h  constants.h  intel_fpga_api.h  intel_fpga_api_uio.h  intel_fpga_platform.h  intel_fpga_platform_api.h  intel_fpga_platform_api_uio.h  intel_fpga_platform_uio.h  intel_st_debug_if_common.h  intel_st_debug_if_packet.h  intel_st_debug_if_platform.h  intel_st_debug_if_server.h  intel_st_debug_if_sockets.h  intel_st_debug_if_st_dbg_ip_driver.h  intel_st_debug_if_stream_dbg.h  packet.h  platform.h  remote_dbg.h  server.h  sockets.h  st_dbg_ip_allocator.h  st_dbg_ip_driver.h  stream_dbg.h
protodrv_api/: CMakeLists.txt  intel_fpga_api_uio.c  intel_fpga_platform_api_uio.c
protodrv_api/common/: CMakeLists.txt
protodrv_api/common/inc/: intel_fpga_api_cmn_inf.h  intel_fpga_api_cmn_msg.h
protodrv_api/common/src/: intel_fpga_api_cmn_inf.c  intel_fpga_api_cmn_msg.c
protodrv_api/uio/: CMakeLists.txt
protodrv_api/uio/inc/: intel_fpga_api.h  intel_fpga_api_uio.h  intel_fpga_platform.h  intel_fpga_platform_api.h  intel_fpga_platform_api_uio.h  intel_fpga_platform_uio.h
protodrv_api/uio/src/: intel_fpga_api_uio.c  intel_fpga_platform_api_uio.c
protodrv_api/uio/test/: CMakeLists.txt
protodrv_api/uio/test/interrupt/: CMakeLists.txt  main.c
protodrv_api/uio/test/utst/: CMakeLists.txt  intel_fpga_api_uio_test.cpp  intel_fpga_platform_api_uio_test.cpp  intel_fpga_platform_uio_utst.cpp
streaming/: CMakeLists.txt  common.c  constants.c  intel_st_debug_if_common.c  intel_st_debug_if_server.c  intel_st_debug_if_sockets.c  intel_st_debug_if_st_dbg_ip_driver.c  intel_st_debug_if_stream_dbg.c  packet.c  server.c  sockets.c  st_dbg_ip_driver.c  stream_dbg.c  stream_dbg.cpp
streaming/inc/: intel_st_debug_if_common.h  intel_st_debug_if_server.h  intel_st_debug_if_sockets.h  intel_st_debug_if_st_dbg_ip_driver.h
streaming/src/: intel_st_debug_if_constants.c  intel_st_debug_if_packet.c  intel_st_debug_if_server.c  intel_st_debug_if_sockets.c  intel_st_debug_if_st_dbg_ip_driver.c  intel_st_debug_if_stream_dbg.c
test/: CMakeLists.txt
test/interrupt/: CMakeLists.txt  main.c
test/protodrv/: CMakeLists.txt  intel_fpga_api_uio_test.cpp  intel_fpga_platform_api_uio_test.cpp
